See #23220: Use jakarta.annotation instead of javax.annotation (JSR305)
Some lint issues were also fixed.

Signed-off-by: Taylor Smock <tsmock@meta.com>